--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a class="logo" href="index.html">
         <img src="slogo.png" alt="Logo">
     </a>
-    <h1>Welcome To Siemens Mobility Industries</h1>
+    <h1>Welcome To Siemens Mobility Industries Kalwa</h1>
     <h2>Master Drawing List</h2>
 
     <div class="p">
