--- a/SIP.html
+++ b/SIP.html
@@ -15,7 +15,7 @@
     <H>Designed By: Railway </H>
     <p>
       1. The signal interlocking plan in railway mobility involves coordinating signals, switches, and track circuits.<br>
-      2. Used to ensure safe and efficient train operations. <br>
+      2. Used to ensure safe and efficient train operation. <br>
       3. Key aspects include signal placement, track circuit configuration, interlocking mechanisms.<br>      
       4. Experts in railway signaling are involved in designing and maintaining the interlocking plan to ensure the safety of train movements.<br>
     
