--- a/CRP.html
+++ b/CRP.html
@@ -19,7 +19,7 @@
       <br>
       2. Specifies the type and diameter of cores (1.5 sqmm) as per MSDAC standards.
       <br>
-      3. Provides detailed alignment for (outdoor cable laying.)laying cables in outdoor
+      3. Provides detailed alignment for outdoor cable laying.
       <br>
       4. Ensures proper installation and organization of cables for efficient signalling and communication in railways.<br>
      
