--- a/index.html
+++ b/index.html
@@ -1,30 +1,16 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Home</title>
     <title>MDL</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        h1 {
-            font-size: 30px;
-        }
-
-        h1,
-        h2 {
-            color: black;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-    </style>
 </head>
-
 <body>
-
     <a class="logo" href="index.html">
         <img src="slogo.png" alt="Logo">
     </a>
-    <h1>Welcome To Siemens</h1>
-    <h2>Master Drawing List</h2>
+    <h2 id="m" >Welcome To Siemens Mobility Industries</h2>
+    <h2 id="m" >Master Drawing List</h2>
 
     <div class="p">
         <button id="openPopupBtn"> <b>Enter The Date Of Approval of SIP</b> </button>
@@ -38,14 +24,14 @@
         </div>
 
         <div id="selectedDateContainer" style="display: none;">
-            <h3>Approval Date of SIP:</h3>
-            <p id="selectedDate"></p>
+            <h3 style="color: #fff;">Approval Date of SIP:</h3>
+            <p id="selectedDate" style="color: #fff;"></p>
         </div>
     </div>
     <div class="search">
         <form id="searchForm">
-            <input type="text" id="searchInput" placeholder="Search Categories...">
-            <input type="submit" value="Search">
+            <input type="text" id="searchInput" placeholder="Search Tasks...">
+            <input type="submit" value="Search" style="background-color: black; color: #fff;" >
         </form>
     </div>
 
@@ -73,7 +59,6 @@
             <a href="logic_ckt.html" target="_blank">Application Logic Circuits</a>
             <a href="SWR.HTML" target="_blank">SWR</a>
             <a href="SWRD.HTML" target="_blank">SWRD</a>
-            <!-- <a href="EQ_plan.html" target="_blank">Equipment Layout Plan</a> -->
             <!-- Add more items as needed -->
         </div>
     </div>
@@ -158,10 +143,7 @@
             <h3>SWRD</h3>
             <a class="pdf-button" href="SWRD.HTML" target="_blank">Details</a>
         </div>
-        <!-- <div class="book">
-            <h3>Equipment Layout Plan</h3>
-            <a class="pdf-button" href="EQ_plan.html" target="_blank">Details</a>
-        </div> -->
+       
     </div>
     <footer>
         <div>
